[package]
name = 'strconf'
description = 'Tired of unexpected configuration format fatigue? Now get tired more!'
version = '0.1.0'
edition = '2021'
license = 'AGPL-3.0-or-later'

[dependencies]
anyhow = '1'
toml = '0.8.12'
serde_json = '1.0.115'
serde_yaml = '0.9.33'

[dependencies.serde]
version = '1.0.197'
features = ['derive']
